styles and fixed layout issues caused by validations

--- a/app/assets/styles/style.less
+++ b/app/assets/styles/style.less
@@ -34,3 +34,7 @@ body {
     box-shadow: none;
   }
 }
+
+.input-group-addon > .validation-status {
+  display: inline-block;
+}
